test_translator/tests/data/checkpoint_2/core/fail/60_tol_flag_basic/solution.ts
export function approx_pi(): number {
    return 3.15;  // Too far even with tolerance
}
